# opengloves-ui

./: .gitignore  .gitmodules  .prettierignore  LICENSE  README.md  main.js  neutralino.config.json  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.js  rollup.config.js  svelte.config.js  tailwind.config.cjs  tailwind.config.js  vite.config.ts
.github/workflows/: codeql-analysis.yml  release-tauri-app.yml
docs/: Building.md  Installation.md
public/: index.html
public/js/: main.js
resources/settings/: default.vrsettings
sidecar/: CMakeLists.txt  main.cpp  main.h
sidecar-settings/: main.cpp
sidecar/libraries/crow/: crow_all.h
src/: App.svelte  Form.svelte  main.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Accordion.svelte  Footer.svelte  Link.svelte  Menu.svelte  Suspense.svelte  TextInput.svelte  Toast.svelte  ToolTip.svelte
src/components/Accordion/: Accordion.svelte
src/components/Button/: DefaultButton.svelte  SuspenseButton.svelte
src/components/Config/: ConfigItem.svelte  ConfigList.svelte
src/components/Functions/: PoseCalibration.svelte  PoseCalibrationFunction.svelte  ResetFunction.svelte  ServoCalibration.svelte  ServoCalibrationFunction.svelte
src/components/Input/: CheckBox.svelte  Select.svelte  Text.svelte
src/components/Input/Button/: DefaultButton.svelte  OrangeButton.svelte  RedButton.svelte  SuspenseButton.svelte
src/components/Toast/: Toast.svelte
src/lib/components/alert/: Toast.svelte
src/lib/components/async/: Suspense.svelte
src/lib/components/config/: ConfigItem.svelte
src/lib/components/container/: Accordion.svelte
src/lib/components/form/: Select.svelte
src/lib/components/form/input/: Checkbox.svelte  Number.svelte  Text.svelte
src/lib/components/form/input/button/: OrangeButton.svelte  SuspenseButton.svelte
src/lib/components/form/input/tooltip/: ToolTip.svelte  ToolTipContainer.svelte
src/lib/components/nav/: Navbar.svelte
src/lib/config/: server.json  strings.json
src/lib/functions/: PoseCalibration.svelte  Reset.svelte  ServoCalibration.svelte
src/lib/scripts/: http.ts  string.ts
src/lib/stores/: toast.ts
src/pages/: Configuration.svelte  Functions.svelte  Status.svelte  _layout.svelte  functions.svelte  index.svelte  settings.svelte
src/pages/driver/: configuration.svelte  functions.svelte  index.svelte
src/resources/: vrsettings.json
src/routes/: +layout.svelte  +page.ts
src/routes/(reactive)/: +layout.svelte
src/routes/(reactive)/configuration/: +page.svelte
src/routes/(reactive)/functions/: +page.svelte
src/splashscreens/: Init.svelte
src/stores/: configuration.js  settings.js  splash.js  toast.js
src/strings/: configuration_options.json
src/utils/: configuration.js  configurationHandler.js  http.js  object.js  openvr.js  sidecar.js  storage.js  string.js
