[package]
name = "app"
version = "0.1.0"
description = "OpenGloves UI"
authors = [ "danwillm" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0.82"
serde = { version = "1.0.139", features = [ "derive" ] }
tauri = { version = "1.0.4", features = ["fs-read-dir", "fs-read-file", "fs-write-file", "http-all", "process-relaunch", "shell-open", "shell-sidecar", "window-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
